Minor changes, some comments added